Fixed spacing

--- a/map.css
+++ b/map.css
@@ -12,7 +12,7 @@ html * {
 }
 .description { 
     width: 800px;
-    height: 300px;
+    height: 330px;
     margin: 5px auto;
     text-align: left;
 }
